# ProNovo-Studio

./: .gitignore  README.md  package-lock.json  package.json
frontend/: README.md  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/sdk/: custom_instance.ts  orval.config.ts  package.json
frontend/sdk/schemas/: py_openapi.json
frontend/sdk/src/: custom_hooks.ts  index.tsx  py_api.ts
frontend/sdk/src/codegen_models/: index.ts  message.ts  messageData.ts
frontend/ui/: README.md  index.html  package-lock.json  package.json
frontend/ui/src/: App.tsx  index.tsx
frontend/ui/src/components/: ChatPane.tsx  FileUpload.tsx  NavBar.tsx  PDBViewer.tsx
py-backend/: README.md  pyproject.toml
py-backend/experiments/: model.py
py-backend/src/: main.py
py-backend/src/agents/: agent.py  agent_graph.py  schemas.py  tools.py
py-backend/src/routes/home/: route.py
py-backend/src/routes/messages/: send_message.py
