[project]
name = "py-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "apinto17",email = "apinto0704@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)"
]

[tool.poetry]
packages = [{include = "py_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
